fix: header styles & WIP on mobile carousel

--- a/public/assets/css/theme.css
+++ b/public/assets/css/theme.css
@@ -17613,6 +17613,10 @@ pre, code {
   -moz-osx-font-smoothing: auto;
 }
 
+main section:first-of-type {
+  padding-top: 0;
+}
+
 section {
   position: relative;
   padding-top: 4rem;
